--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,4 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: Junhong He's Homepage
+page-top-title: Junhong He
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+email: "jh.he@smbu.edu.cn"
