--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,4 +1,4 @@
 title: Junhong He's Homepage
 page-top-title: Junhong He
-top-section-bg-text: Be what you wanna be
+top-section-bg-text: All we fight for it.
 email: "jh.he@smbu.edu.cn"
